--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,11 +47,17 @@ h1, h2 {
 .active {
     border-bottom: 1px solid #3a3a3a;
 }
+
+/* Hero image and cover text*/
+
+
 /* hero-image*/
 #hero-outer {
     height: 600px;
     width: 100%;
     overflow: hidden;
+    
+    position: relative;
 }
 
 #hero-image {
@@ -59,6 +65,11 @@ h1, h2 {
     width: 100%;
     background: url("../css/images/hero-image.webp") no-repeat center center;
 }
+
+#cover-text, cover-text h2 {
+    color: #fff;
+}
+
 /* animates zoom effect on loading page*/
 animation-name: hero-zoom;
 animation-duration: 5s;
@@ -74,4 +85,23 @@ animation-fill-mode: forwards;
         transform: scale(1.1);
 
     }
+}
+#cover-text {
+    font-size: 130%;
+    font-family: Oswald,sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    
+    width: 300px;
+    height: 200px;
+
+    padding-top: 40px;
+    padding-left: 10px;
+
+    background-color: rgb(204, 109, 107.7);
+
+    bottom: 30px;
+    right: 150px;
+
+    position: absolute;
 }
