--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,7 @@ h1, h2 {
 #logo {
     float: left;
     font-size: 280%;
+    margin-left: 30px;
 }
 
 /' navigation links'/
@@ -98,10 +99,35 @@ animation-fill-mode: forwards;
     padding-top: 40px;
     padding-left: 10px;
 
-    background-color: rgb(204, 109, 107.7);
+    background-color: rgba(204, 109, 107, .7);
 
     bottom: 30px;
     right: 150px;
 
     position: absolute;
+}
+*/ club-ethos */
+#club-ethos {
+    height: 600px;
+}
+
+#left-about {
+    padding: 30px;
+    width: 33%;
+    float: left;
+    background-color: blue;
+
+}
+
+#right-about {
+    padding: 30px;
+    width: 33%;
+    float: right;
+    background-color: silver;
+}
+
+#center-about {
+    width: 33%;
+    margin: 0 auto;
+    background-color: green;
 }
