--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,9 +115,14 @@ animation-fill-mode: forwards;
     padding: 30px;
     width: 33%;
     float: left;
-    background-color: blue;
+     
 
 }
+
+h2 {
+    text-decoration: underline;
+}
+
 
 #right-about {
     padding: 30px;
@@ -130,4 +135,18 @@ animation-fill-mode: forwards;
     width: 33%;
     margin: 0 auto;
     background-color: green;
+}
+
+hr {
+    border-top: 1p solid #3a3a3a;
+    width: 100%;
+    margin: 5px 0;
+}
+
+.left-about-heading {
+    width: 60%;
+    float: right;
+    line-height: 20px;
+    clear: both;
+    margin-bottom: 50px;
 }
