--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,11 +112,10 @@ animation-fill-mode: forwards;
 }
 
 #left-about {
-    padding: 30px;
+    padding-top: 30px;
     width: 33%;
     float: left;
      
-
 }
 
 h2 {
@@ -125,10 +124,10 @@ h2 {
 
 
 #right-about {
-    padding: 30px;
+    padding-top: 30px;
     width: 33%;
     float: right;
-    background-color: silver;
+    
 }
 
 #center-about {
@@ -149,4 +148,20 @@ hr {
     line-height: 20px;
     clear: both;
     margin-bottom: 50px;
+}
+
+.right-about-heading {
+    width: 60%;
+    float: left;
+    line-height: 20px;
+    clear: both;
+    margin-bottom: 50px;
+}
+
+.right-about-heading h2 {
+    text-align: right;
+}
+
+.right-about-heading p {
+    text-align: right;
 }
