--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,3 +189,27 @@ hr {
     height: 100%;
     border-radius: 50%;
 }
+
+/* event times*/
+#times {
+    background-image: url("../css/images/dublin-city.webp");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    overflow: hidden;
+}
+#times div{
+    color: #fafafa;
+    background-color: rgba(0, 0, 0, .6);
+    width: 20%;
+    height: 300px;
+    float: left;
+    padding: 30px 0 0 10p;
+    text-align: center;
+    border: 2px solid #fafafa;
+    box-sizing: border-box;
+}
+#times h2 {
+    color: #fafafa;
+}
